pre overflow fix

--- a/css/basic.css
+++ b/css/basic.css
@@ -44,7 +44,7 @@ a {color: var(--c1);  text-decoration:none}
 
 a:hover {color: var(--c1); text-decoration: underline}
 
-pre {font: 1em/1.6 var(--mono); background: var(--c2); padding: 1em;}
+pre {font: 1em/1.6 var(--mono); background: var(--c2); padding: 1em; overflow: auto}
 
 code {font: 1em/1.6 var(--mono);}
 
